# Game-Development-with-Rust-and-WebAssembly

./: .gitignore  1.js  Cargo.toml  README.md  index.js  netlify.toml  package-lock.json  package.json  rust-toolchain.toml  webpack.config.js
.github/workflows/: build.yml
raw_assets/original/freetileset/cdr/: Backup_of_Preview.cdr  Preview.cdr
raw_assets/original/freetileset/eps/: Tile.eps
raw_assets/resized/dog/jump/: visit_bevouliin_dot_com.txt
raw_assets/resized/freetileset/ai/: Sample.ai  Tile.ai
raw_assets/resized/freetileset/cdr/: Backup_of_Tile.cdr  Tile.cdr
raw_assets/sprite_sheets/: rhb.json  rhb_sheet.tps  rhb_sheet_trimmed.tps  rhb_trimmed.json  tiles.json  tiles_sheet.tps
src/: browser.rs  engine.rs  game.rs  lib.rs  segments.rs  sound.rs
src/game/: test_browser.rs
static/: index.html  rhb.json  styles.css
tests/: app.rs
