# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]

# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.

wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
console_error_panic_hook = "0.1.6"
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3.12"
wasm-bindgen-futures = "0.4.20"
serde = {version = "1.0.59", features = ["derive"] }
anyhow = "1.0.40"
async-trait = "0.1.49"
js-sys = "0.3.50"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.47"
features = ["console",
           "Window",
           "Document",
           "HtmlCanvasElement",
           "CanvasRenderingContext2d",
           "Element",
           "HtmlImageElement",
           "Response",
           "Performance",
           "KeyboardEvent",
           "AudioContext",
           "AudioBuffer",
           "AudioBufferSourceNode",
           "AudioDestinationNode",
           ]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.20"
js-sys = "0.3.47"
